# react-rocket-posgre

./: README.md  skaffold.yml
backend/: Cargo.toml
backend/src/: main.rs  routes.rs
frontend/: Dockerfile  k8s-next.yml  package.json
frontend/utils/entities/: web3.ts
frontend/utils/tasks/: wallet.ts
