[package]
name = "backend"
version = "0.1.0"
authors = ["NoCtrlZ <phantomofrotten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
rocket_cors = "0.5.1"
rand = "0.7.2"
rust-crypto = "0.2"
openssl = { version = "0.10", features = ["vendored"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
